# deep-ml-solutions

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  conftest.py  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: test.yml
deepml/: p001.py  p002.py  p003.py  p004.py  p005.py  p006.py  p007.py  p008.py  p009.py  p010.py  p011.py  p012.py  p013.py  p014.py  p015.py  p016.py  p017.py  p018.py  p019.py  p020.py  p021.py  p022.py  p023.py  p024.py  p025.py  p026.py  p027.py
